# intersect_test_module

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md  config.cmake  version.h.in
.ind_build/benchs/: CMakeLists.txt  main.cpp
.ind_build/benchs/include/: utils.hpp
.ind_build/docs/: CMakeLists.txt  Doxyfile
.ind_build/tests/: CMakeLists.txt  main.cpp
.ind_build/tests/include/: random.hpp  utils.hpp
benchs/: api_edge_spring_bench.cxx  gme_1_api_mk_ed_conic_bench.cxx  gme_api_edge_arclength_metric_bench.cxx  gme_api_edge_spring_taper_bench.cxx  gme_api_mk_ed_conic_bench.cxx  gme_api_orient_wire_bench.cxx  gme_cstrapi_1_make_frustum_bench.cxx  gme_cstrapi_1_make_prism_bench.cpp  gme_cstrapi_1_make_sphere_bench.cpp  gme_cstrapi_1_solid_shpere_bench.cxx  gme_cstrapi_2_make_sphere_bench.cpp  gme_cstrapi_2_make_torus_bench.cxx  gme_cstrapi_3_make_frustum_bench.cpp  gme_cstrapi_3_solid_sphere_bench.cxx  gme_cstrapi_api_loop_external_bench.cxx  gme_cstrapi_api_solid_block_bench.cxx  gme_cstrapi_curve_arc_center_edge_bench.cxx  gme_cstrapi_curve_arc_diagonal_bench.cpp  gme_cstrapi_edge_arclength_metric_bench.cpp  gme_cstrapi_fit_line_bench.cxx  gme_cstrapi_fit_plane_bench.cxx  gme_cstrapi_make_ewire_bench.cpp  gme_cstrapi_make_sphere_bench.cpp  gme_cstrapi_reverse_body_bench.cxx  gme_cstrapi_trim_middle_bench.cxx  gme_split_edge_at_disc_bench.cxx  template_simple_api_bench.cxx
demo/: ACIS_Win.cpp  ACIS_Win.h  ACIS_Win.rc  ACIS_mesh.cpp  ACIS_mesh.hxx  CMakeLists.txt  Resource.h  blend_examples.cpp  blend_examples.hxx  bool_examples.cpp  bool_examples.hxx  constructors_examples.cpp  constructors_examples.hxx  glfwWin.cpp  glfwWin.hxx  gme_cstrapi_1_api_build_wire_example.cpp  gme_cstrapi_1_api_build_wire_example.hxx  gme_cstrapi_1_api_make_trface_examples.cpp  gme_cstrapi_1_api_make_trface_examples.hxx  gme_cstrapi_1_api_mk_ed_conic_examples.cpp  gme_cstrapi_1_api_mk_ed_conic_examples.hxx  gme_cstrapi_1_curve_spline2_example.cpp  gme_cstrapi_1_curve_spline2_example.hxx  gme_cstrapi_1_edge_spiral_example.cpp  gme_cstrapi_1_edge_spiral_example.hxx  gme_cstrapi_1_edge_spring_example.cxx  gme_cstrapi_1_edge_spring_example.hxx  gme_cstrapi_1_face_spl_ctrlpts_example.cpp  gme_cstrapi_1_face_spl_ctrlpts_example.hxx  gme_cstrapi_1_face_torus_example.cpp  gme_cstrapi_1_face_torus_example.hxx  gme_cstrapi_1_fit_plane_example.cpp  gme_cstrapi_1_fit_plane_example.hxx  gme_cstrapi_1_make_cuboid_example.cpp  gme_cstrapi_1_make_cuboid_example.hxx  gme_cstrapi_1_make_frustum_example.cpp  gme_cstrapi_1_make_frustum_example.hxx  gme_cstrapi_1_make_prism_example.cpp  gme_cstrapi_1_make_prism_example.hxx  gme_cstrapi_1_make_pyramid_example.cpp  (+181 more)
demo/glfw/include/: glfw3.h
include/intersector/: cucuint_util.hxx
include/intersector/acis/: AcisPolyError.h  AcisScheme.hxx  BodyMesh.hxx  CATAssert.h  CATBSTR.h  CATBSTRDef.h  CATBaseDispatch.h  CATBaseUnknown.h  CATBaseUnknown_required.h  CATBaseUnknown_var.h  CATBaseUnknown_var_required.h  CATBody.h  CATBoolean.h  CATBooleanDef.h  CATCGMBOAObject.h  CATCGMBuildDebug.h  CATCGMCheckAnomaly.h  CATCGMCheckAnomalyValueInfo.h  CATCGMHashTable.h  CATCGMHashTableBase.h  CATCGMImplHolderMacros.h  CATCGMJournal.h  CATCGMJournalList.h  CATCGMNewArray.h  CATCGMNewInterface.h  CATCGMReferenceClassImplHolder.h  CATCGMScaleCategoryDef.h  CATCGMValueClassImplHolder.h  CATCGMVirtual.h  CATCGMVirtualMacros.h  CATCORBAAny.h  CATCORBABoolean.h  CATCORBASequence.h  CATCORBATypes.h  CATCellHashTable.h  CATChar.h  CATCollec.h  CATCollecRoot.h  CATCreateClassInstance.h  CATCreateClassInstance_required.h  (+1721 more)
include/intersector/acis/meshgems/: adapt.h  adapt_short_names.h  basic_types.h  boundary_layer_sizemap_creator.h  cad.h  cadsurf.h  cadsurf_old_names.h  cadsurf_short_names.h  cleaner.h  cleaner_short_names.h  code.h  context.h  cvm.h  cvm_short_names.h  dcad.h  dllapi.h  element_generation_map.h  hexa.h  hexa_old_names.h  hexa_short_names.h  highorder.h  hybrid.h  hybrid_cfd.h  hybrid_cfd_short_names.h  hybrid_short_names.h  interrupt.h  mdecl.h  mesh.h  mesh_checker.h  mesh_cracker.h  mesh_operations.h  mesh_statistics.h  mesh_tag_system.h  meshgems.h  meshgems_old_names.h  meshgems_short_names.h  message.h  patchsurf.h  patchsurf_short_names.h  prox2d.h  (+13 more)
include/intersector/acis/vgl/: attstack.h  bitmap.h  databuf.h  dfile.h  direct3ddev.h  dispfun.h  dlist.h  dmap.h  dopt.h  drawfun.h  drawipc.h  dtee.h  dview.h  fbuffer.h  gdidev.h  iactor.h  light.h  lmodel.h  material.h  opengldev.h  pixelmap.h  popup.h  quadric.h  rasfont.h  rendbuf.h  rmode.h  svgdev.h  texture.h  vgl.h  vglbmp.h  vgld3d.h  vgldefs.h  vglffmpeg.h  vglgif.h  vgljpeg.h  vgljpgapi.h  vgljpgdct.h  vgljpgerr.h  vgljt.h  vglpict.h  (+11 more)
src/: cucuint.cpp  cucuint_util.cpp
tests/: intersector_nurbs_nurbs_test.cpp
tests/points_segments_test/: flat_nail.txt  triangle.txt  window.txt  wing_nut.txt
tests/spd_ent10_test/: RegularPrism.sat  StandardPrism.sat
tests/spd_ent1_test/: WholeSegment.sat
tests/spd_ent2_test/: RoundDoublePlane.sat
tests/spd_ent6_test/: test1.sat  test2.sat  test3.sat
tests/spd_ent7_test/: PartialApple.sat  PartialDonut.sat  PartialLemon.sat  PartialVortex.sat  WholeApple.sat  WholeDonut.sat  WholeLemon.sat  WholeVortex.sat
tests/spd_ent8_test/: NormalEnt8.sat
tests/spd_ent98_test/: rectangle.sat  rectangle_with_one_hole.sat  rectangle_with_two_hole.sat
tests/spd_ent99_test/: NoHeight.sat  PlaneWithHole.sat  WholePlane.sat
tests/split_edge_at_disc/: edgeof4_order2.sat  spline&circleg0.sat
